@@ -1,11 +1,18 @@
-import java.lang.reflect.Field
-
 //file:noinspection GroovyAssignabilityCheck
 def localRoot = project
-allprojects{}
-subprojects{
+Project.metaClass.easyPath= {
+    //noinspection GroovyAssignabilityCheck
+    sourceSets.main.java.srcDirs = ["src/", "$buildDir/generated/sources/annotationProcessor/java/main", "generated/"]
+    //noinspection GroovyAssignabilityCheck
+    sourceSets.test.java.srcDirs = ["test/"]
+    //noinspection GroovyAssignabilityCheck
+    sourceSets.test.resources.srcDirs = ["test/resources"]
+}
+allprojects {}
+subprojects {
     apply plugin: 'maven-publish'
     group = 'com.github.asm-ext'
+    version = "1.0.0"
     ext.localRoot = localRoot
     ext.all_exports = [
             'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
@@ -22,22 +29,22 @@ subprojects{
             'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
     ]
     ext.aproj = { String name ->
-        if(localRoot == rootProject) return project(":" + name)
+        if (localRoot == rootProject) return project(":" + name)
         Project proj = localRoot
-        for(final def part in name.split(':')){
-            if(part=="")continue
+        for (final def part in name.split(':')) {
+            if (part == "") continue
             proj = proj.childProjects[part]
         }
         return proj
     }
-    repositories{
+    repositories {
         mavenCentral()
     }
 
     ext.devAnnotations = ext.aproj("dev-annotations");
-    if(subprojects.size() == 0){
+    if (subprojects.size() == 0) {
 
-        tasks.withType(JavaCompile).configureEach{
+        tasks.withType(JavaCompile).configureEach {
             targetCompatibility = 17
             sourceCompatibility = 17
             options.fork = true
@@ -54,13 +61,11 @@ subprojects{
             ]
         }
         apply plugin: "java-library"
-        //noinspection GroovyAssignabilityCheck
-        sourceSets.main.java.srcDirs = ["src/", "$buildDir/generated/sources/annotationProcessor/java/main", "generated/"]
-        //noinspection GroovyAssignabilityCheck
-        sourceSets.test.java.srcDirs = ["test/"]
-        //noinspection GroovyAssignabilityCheck
-        sourceSets.test.resources.srcDirs = ["test/resources"]
-        dependencies{
+        ext.easyPath={project.easyPath()}
+        if (!new File(project.projectDir, "build.gradle").exists()) {
+            project.easyPath()
+        }
+        dependencies {
             testImplementation platform("org.junit:junit-bom:$junitVersion")
             testImplementation 'org.junit.jupiter:junit-jupiter'
 
@@ -69,7 +74,7 @@ subprojects{
             implementation "org.ow2.asm:asm-tree:$asmVersion"
             implementation "org.ow2.asm:asm-analysis:$asmVersion"
 
-            if(project != devAnnotations) compileOnly devAnnotations
+            if (project != devAnnotations) compileOnly devAnnotations
             compileOnly "org.jetbrains:annotations:$jetbrainsAnnoVersion"
             testCompileOnly "org.jetbrains:annotations:$jetbrainsAnnoVersion"
 
@@ -79,7 +84,7 @@ subprojects{
             testCompileOnly "org.projectlombok:lombok:$lombokVersion"
             testAnnotationProcessor "org.projectlombok:lombok:$lombokVersion"
         }
-        test{
+        test {
             useJUnitPlatform()
         }
 
@@ -89,95 +94,52 @@ subprojects{
                 encoding('UTF-8')
             }
         }
-        javadoc{
-            // Настройки для Javadoc
+        javadoc {
             options.encoding = 'UTF-8'
             options.memberLevel = JavadocMemberLevel.PUBLIC
             options.addStringOption("Xdoclint:none", "-quiet")
 
-/*
-            *//*-release*//*
-
-
-            Class<?> clazz = options.getClass()
-            Field optionFileField = null
-            while(optionFileField == null){
-                try{
-                    optionFileField = clazz.getDeclaredField("optionFile")
-                }catch(NoSuchFieldException e){}
-                clazz = clazz.getSuperclass();
-            }
-            optionFileField.accessible = true;
-            def optionFile = optionFileField.get(options)
-            clazz = optionFile.getClass()
-            Field optionsField = null
-            while(optionsField == null){
-                try{
-                    optionsField = clazz.getDeclaredField("options")
-                }catch(NoSuchFieldException e){}
-                clazz = clazz.superclass
-            }
-            optionsField.accessible = true
-            Map<String, Object> optionMap = optionsField.get(optionFile);
-            optionMap.remove("-release")
-            List<String> all=all_exports;
-            String exportOptions = all.collect { "--add-exports ${it}" }.join(";")
-            for(final def it_ in all){
-                options.addStringOption('-add-exports='+it_)
-                options.addStringOption('-add-opens='+it_)
-            }*/
             failOnError = false
         }
 
-        task sourcesJar(type: Jar, dependsOn: classes){
+        task sourcesJar(type: Jar, dependsOn: classes) {
             archiveClassifier = 'sources'
             from sourceSets.main.allSource
         }
-//        task sourcesJar(type: Jar) {
-//            // Указываем, какие файлы включать в архив
-//            from sourceSets.main.allSource.srcDirs.collect { fileTree(dir: it) {
-//                // Исключаем все файлы из каталога build/
-//                exclude '**/build/**'
-//            } }
-//
-//            // Указываем имя JAR файла
-//            archiveClassifier.set('sources')
-//        }
     }
 }
 ext.asmLibRoot = project
 
 String calculateName(Project proj) {
     //    Set<Project> projects = System.getenv("JITPACK") != "true" ? rootProject.subprojects - project(":test") : rootProject.subprojects
-    if(proj.parent == asmLibRoot) return proj.name
+    if (proj.parent == asmLibRoot) return proj.name
     return calculateName(proj.parent) + "-" + proj.name
 }
 
 
 void configure1(Project project) {
-    if(project.subprojects.size() != 0) return
-//    println project
+    if (project.subprojects.size() != 0) return
     //noinspection GroovyAssignabilityCheck
     println(project.group + ":" + calculateName(project) + ":" + project.version)
-    configure(project){
+    configure(project) {
         ext.asmRoot = asmLibRoot
 
-        compileJava{
+        compileJava {
             options.fork = true
             options.incremental = true
         }
 
-        java{
+        java {
             withJavadocJar()
             withSourcesJar()
         }
         def selfProject = project
-        publishing{
-            publications{
-                maven(MavenPublication){
-                    if(selfProject.name != "unshadowed-lombok"){
+        publishing {
+            publications {
+                maven(MavenPublication) {
+                    if (selfProject.name != "unshadowed-lombok") {
                         from components.java
-                    }else{
+                    } else {
                         println("shadow")
                     }
 //                    group = selfProject.group
@@ -190,12 +152,12 @@ void configure1(Project project) {
     }
 }
 
-subprojects{ configure1(project) }
+subprojects { configure1(project) }
 
 void eachChild(Set<Project> set) {
-    configure(set){
-        dependencies{
-            if(subprojects.size() == 0){
+    configure(set) {
+        dependencies {
+            if (subprojects.size() == 0) {
                 compileOnly "org.jetbrains:annotations:$jetbrainsAnnoVersion"
 //                testImplementation "junit:junit:$junitVersion"
 //                testRuntimeOnly("org.junit.vintage:junit-vintage-engine:5.8.2")
@@ -208,7 +170,7 @@ void eachChild(Set<Project> set) {
 
 
 eachChild(subprojects)
-afterEvaluate{
+afterEvaluate {
 
     //    tasks.getByName('publishToMavenLocal').execute()
 }
